--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:title" content="Aim Helper" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="public\Capture.JPG" />
+    <meta property="og:url" content="https://aimhelper.herokuapp.com/" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Aim Helper</title>
   </head>
